<resources>
    <string name="app_name">Moment</string>

    <string name="no_string_data">-</string>
    <string name="no_int_data">0</string>

    <string name="question">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Authorization/Registration -->
    <string name="main_fraze">share your memories</string>
    <string name="text_for_registration_question">Don\'t have an account?</string>
    <string name="btn_authorization">Log In</string>

    <string name="registration">Registration</string>
    <string name="text_for_authorization_question">Already have an account?</string>
    <string name="btn_registration">Sign Up</string>
    <string name="error_password">Passwords don\'t match</string>

    <!-- Hint For Photographer-->
    <string name="hint_name">Surname and name</string>
    <string name="hint_username">Username</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="hint_profile_description">Profile description</string>
    <string name="hint_photography_equipment">Photography equipment</string>
    <string name="hint_photography_awards">Photography awards</string>

    <string name="empty_name">Enter surname and name</string>
    <string name="empty_username">Enter username</string>
    <string name="empty_email">Enter email</string>
    <string name="empty_password">Enter password</string>

    <string name="empty_profile_description">Enter profile description</string>
    <string name="empty_photography_equipment">Enter photography equipment</string>
    <string name="empty_photography_awards">Enter photography awards</string>


    <!-- Bottom Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_messenger">Messenger</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_add_post">Add post</string>
    <string name="menu_add_blog">Add blog</string>


    <!-- Category, Filter -->
    <string name="text_category_directory">Choose category directory</string>
    <string name="text_category">Choose category</string>

    <string name="text_filter">Filter</string>

    <string name="text_what_to_show">What to show</string>
    <string name="tab_filter_new">New</string>
    <string name="tab_filter_top">Top</string>

    <string name="text_period">Period</string>
    <string name="text_period_day">Day</string>
    <string name="text_period_week">Week</string>
    <string name="text_period_month">Month</string>
    <string name="text_period_year">Year</string>
    <string name="text_period_all_time">All time</string>

    <string name="btn_apply_filter">Apply filter</string>


    <!-- Home -->
    <string name="tab_news">News</string>
    <string name="tab_others">Others</string>


    <!-- Search -->
    <string name="enter_search">Search…</string>
    <string name="tab_people">People</string>
    <string name="text_search_empty">Nothing found</string>


    <!-- Profile -->
    <string name="btn_subscribe">Subscribe</string>
    <string name="btn_unsubscribe">Unsubscribe</string>

    <string name="tab_about">About</string>
    <string name="tab_posts">Posts</string>
    <string name="tab_blogs">Blogs</string>

    <string name="title_description">Description</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="title_email">You can contact me by email</string>
    <string name="title_photography_equipment">Photography equipment</string>
    <string name="title_photography_awards">Photography awards</string>

    <!-- Profile Menu -->
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>


    <!-- Subscriptions -->
    <string name="text_followers">followers</string>
    <string name="text_following">following</string>


    <!-- Edit Profile -->
    <string name="title_edit_profile">Edit profile</string>

    <string name="tab_user_info">User info</string>
    <string name="tab_profile_info">Profile info</string>

    <string name="btn_change_photo">Change photo</string>
    <string name="btn_change_user_info">Change user info</string>
    <string name="btn_change_profile_info">Change profile info</string>
    <string name="success_change_profile">Profile changed successfully</string>
    <string name="success_change_profile_photo">Profile photo changed successfully</string>


    <!-- Add Post -->
    <string name="title_add_post">Add post</string>
    <string name="btn_load_photo">Load photo</string>
    <string name="hint_caption">Caption</string>
    <string name="btn_save_post">Save post</string>
    <string name="empty_photo_post">Load photo</string>
    <string name="empty_caption">Enter caption</string>
    <string name="success_add_post">Post added successfully</string>


    <!-- Post Comments -->
    <string name="title_post_comments">Post comments</string>
    <string name="text_comments">comments</string>
    <string name="text_add_comment">Enter comment…</string>
    <string name="text_comment_empty">Enter comment</string>


    <!-- Add Blog -->
    <string name="title_add_blog">Add blog</string>


    <!-- Database -->
    <string name="error_update_database">Unable to update database</string>

    <string name="error_get_by_id">Incorrect id</string>

    <string name="error_incorrect_username_password">Incorrect username or password entered</string>
    <string name="error_authorization">Authorization error. Try again</string>
    <string name="error_registration">Registration error. Try again</string>
    <string name="error_unique_username">This username is already in use</string>
    <string name="error_unique_email">This email is already in use</string>

    <string name="error_get_photo">Error getting photo. Try again</string>
    <string name="error_add_subscription">Error adding subscription. Try again</string>
    <string name="error_delete_subscription">Error when deleting subscription. Try again</string>

    <string name="error_edit_profile">Error when changing profile. Try again</string>
    <string name="error_edit_profile_photo">Error when changing profile photo. Try again</string>

    <string name="error_add_post">Error adding post. Try again</string>
    <string name="error_add_photo_post">Error when adding photo to post. Try again</string>
    <string name="error_edit_post">Error when changing post. Try again</string>
    <string name="error_delete_post">Error when deleting a post. Try again</string>
    <string name="error_add_like">Error adding like. Try again</string>
    <string name="error_delete_like">Error when deleting like. Try again</string>
    <string name="error_add_comment">Error adding comment. Try again</string>
</resources>