<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"/>

    <item
        android:id="@+id/nav_add_post"
        android:icon="@drawable/ic_add_post"
        android:title="@string/menu_add_post" />

    <item
        android:id="@+id/nav_messenger"
        android:icon="@drawable/ic_messenger_black"
        android:title="@string/menu_messenger" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile" />
</menu>